--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Susan Jiang by susjiang</title>
+    <title>Susan Jiang</title>
   </head>
 
   <body>
